# game-engine

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/engine/: Application.cpp  Application.h  Engine.h  Log.h  headers.h
src/engine/Core/: Core.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  SDLWindow.cpp  SDLWindow.h  Timestep.h  Window.h
src/engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/engine/Platform/OpenGL/: ImguiOpenGLRenderer.cpp  ImguiOpenGLRenderer.h  OpenGLContext.cpp  OpenGLContext.h
src/engine/Platform/SDL/: SDLInput.cpp  SDLWindow.cpp  SDLWindow.h
src/engine/Renderer/: GraphicsContext.cpp  GraphicsContext.h  RendererAPI.cpp  RendererAPI.h
src/engine/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
src/sandbox/: Sandbox.cpp  Sandbox.h
